--- a/index.css
+++ b/index.css
@@ -38,14 +38,14 @@ header {
     background: #960499;
 }
 
-.input {
+input {
     margin: 25px 25px;
     padding: 10px;
     width: 900px;
     border-radius: 25px;
 
     height: 54px;
-    background-color: pink;
+    background-color: rgba(255, 255, 255, 0.4);
 
 }
 
