--- a/index.css
+++ b/index.css
@@ -43,11 +43,18 @@ input {
     padding: 10px;
     width: 900px;
     border-radius: 25px;
-
+    outline: none;
     height: 54px;
     background-color: rgba(255, 255, 255, 0.4);
+    border: none;
+    color:#fff;
+    padding-left: 20px;
 
 }
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #fff;
+    opacity: 1; /* Firefox */
+  }
 
 .box {
 
